@@ -37,7 +37,6 @@ optflags: m68k -O2 -fomit-frame-pointer
 optflags: ppc -O2 -fsigned-char
 optflags: ppciseries -O2 -fsigned-char
 optflags: ppcpseries -O2 -fsigned-char
-optflags: ppcmac -O2 -fsigned-char
 
 optflags: parisc -O2 -mpa-risc-1-0
 optflags: hppa1.0 -O2 -mpa-risc-1-0
@@ -91,7 +90,6 @@ arch_canon:	mips:	mips	4
 arch_canon:	ppc:	ppc	5
 arch_canon:	ppciseries:	ppciseries	5
 arch_canon:	ppcpseries:	ppcpseries	5
-arch_canon:	ppcmac:	ppcmac	5
 
 arch_canon:	m68k:	m68k	6
 arch_canon:	IP:	sgi	7
@@ -181,7 +179,6 @@ buildarchtranslate: powerpc: ppc
 buildarchtranslate: powerppc: ppc
 buildarchtranslate: ppciseries: ppc
 buildarchtranslate: ppcpseries: ppc
-buildarchtranslate: ppcmac: ppc
 
 buildarchtranslate: atarist: m68kmint
 buildarchtranslate: atariste: m68kmint
@@ -220,7 +217,6 @@ arch_compat: powerpc: ppc
 arch_compat: powerppc: ppc
 arch_compat: ppciseries: ppc
 arch_compat: ppcpseries: ppc
-arch_compat: ppcmac: ppc
 arch_compat: ppc: rs6000
 arch_compat: rs6000: noarch
 
@@ -313,7 +309,6 @@ buildarch_compat: m68k: noarch
 
 buildarch_compat: ppciseries: noarch
 buildarch_compat: ppcpseries: noarch
-buildarch_compat: ppcmac: noarch
 buildarch_compat: ppc: noarch
 
 buildarch_compat: mips: noarch
